Configuração de CNAME e novos daodos

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
     <script type="text/javascript" src="assets/scripts/vendor/jquery.plugin/countdown.js"></script>
     <script src="assets/scripts/main.js"></script>
 
